# bsdiff-rust

./: AGENTS.md  Cargo.toml  README-ZH.md  README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
benchmark/: README.md  benchmark.ts
docs/: GUIDE-ZH.md  GUIDE.md
src/: bsdiff_rust.rs  lib.rs  utils.rs
test/: index.ts
